[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/panel_white.tres" type="StyleBox" id=1]
[ext_resource path="res://res/Helvetica_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/AlertDialog.gd" type="Script" id=3]
[ext_resource path="res://res/buttons/default_red_button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://res/buttons/default_red_button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://res/buttons/default_red_button_pressed.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.984314, 0.286275, 0.286275, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15

[node name="AlertDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 7
color = Color( 0, 0, 0, 0.717647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -175.0
margin_right = 300.0
margin_bottom = 175.0
rect_min_size = Vector2( 600, 350 )
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Panel" parent="Panel/VBoxContainer"]
margin_right = 600.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/VBoxContainer/Head"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Attention !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 45.0
margin_right = 600.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RoomNotFound" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Le cours que vous avez créé ne contient pas de numéro ou de nom de salle. Vous pouvez néanmoins créer le cours mais il risque d'entrer en conflit avec d'autres cours lors de la génération de l'emploi du temps.
Il est conseillé de mettre un numéro de salle provisoire si vous ne le connaissez pas puis le modifier plus tard.

Cliquez sur confirmer pour créer le cours"
align = 3
valign = 1
autowrap = true

[node name="LessonAlreadyInCalendar" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Ce cours est déjà présent dans l'emploi du temps !"
align = 1
valign = 1
autowrap = true

[node name="LessonObligatory" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Ce cours est obligatoire !
Souhaitez-vous tout de même le retirer de l'emploi du temps ?"
align = 1
valign = 1
autowrap = true

[node name="FilledCell" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Cette heure est déjà occupée !"
align = 1
valign = 1
autowrap = true

[node name="LoadingWrongFormat" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Vous ne pouvez pas charger ce type de fichier !"
align = 1
valign = 1
autowrap = true

[node name="SavingWrongFormat" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Le format de fichier indiqué n'est pas valide !"
align = 1
valign = 1
autowrap = true

[node name="OldVersion" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Pour charger ces données vous devez disposer d'une version plus récente du logiciel. Vous pouvez télécharger gratuitement la dernière version disponible sur: ..."
align = 1
valign = 1
autowrap = true

[node name="LoadingOldSave" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Les données que vous souhaitez charger ne sont plus compatbiles avec cette version du logiciel. 

Plus d'informations sur le site officiel"
align = 1
valign = 1
autowrap = true

[node name="EmptySchedule" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "L'emploi du temps est vide !"
align = 1
valign = 1
autowrap = true

[node name="BannedWord" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Le contenu que vous avez entré contient un mot banni par l'administrateur !"
align = 1
valign = 1
autowrap = true

[node name="ConfirmDeletion" type="Label" parent="Panel/VBoxContainer/Body"]
visible = false
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
custom_constants/line_spacing = 13
text = "Êtes-vous sûr de vouloir supprimer cet élément ?
(Action irréversible) "
align = 1
valign = 1
autowrap = true

[node name="ConfirmAllDeletion" type="Label" parent="Panel/VBoxContainer/Body"]
margin_left = 20.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 232.0
rect_min_size = Vector2( 560, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
custom_constants/line_spacing = 13
text = "Supprimer cet élément supprimera tous les cours qui lui sont liés ! 
Êtes-vous sûr de vouloir supprimer cet élément ?
(Action irréversible) "
align = 1
valign = 1
autowrap = true

[node name="Foot" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 290.0
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Foot"]
margin_left = 105.0
margin_top = 12.0
margin_right = 495.0
margin_bottom = 47.0
custom_constants/separation = 15

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer/Foot/ButtonsContainer"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0
text = "Confirmer"

[node name="SubButton" type="Button" parent="Panel/VBoxContainer/Foot/ButtonsContainer"]
margin_left = 135.0
margin_right = 255.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Retirer"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/Foot/ButtonsContainer"]
margin_left = 270.0
margin_right = 390.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Annuler"

[connection signal="pressed" from="Panel/VBoxContainer/Foot/ButtonsContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/ButtonsContainer/SubButton" to="." method="_on_SubButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/ButtonsContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
